# rbac-chatbot

./: .gitignore  README.md  main.py  pyproject.toml
backend/: main.py
backend/core/: config.py
backend/routers/: chat.py
backend/services/: chat_sessions.py  chunking.py  document_loader.py  rag_service.py
frontend/: api.py  app.py  chat.py  login.py  styles.py
frontend/pages/: chat.py  login.py
